src/decaf-parse.output
Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList Decl
    3         | Decl

    4 Decl: VarDecl
    5     | ClassDecl
    6     | InterfaceDecl
    7     | FnDecl

    8 VarDecl: Variable ';'

    9 Variable: Type T_Identifier

   10 Type: T_Void
   11     | T_Bool
   12     | T_Int
   13     | T_Double
   14     | T_String
   15     | NamedType
   16     | Type T_Dims

   17 NamedType: T_Identifier

   18 ClassDecl: T_Class T_Identifier ClassExtends ClassImplements '{' FieldList '}'
   19          | T_Class T_Identifier ClassExtends ClassImplements '{' '}'

   20 ClassExtends: T_Extends T_Identifier
   21             | /* empty */

   22 ClassImplements: T_Implements ImplementsTypeList
   23                | /* empty */

   24 ImplementsTypeList: ImplementsTypeList ',' T_Identifier
   25                   | T_Identifier

   26 InterfaceDecl: T_Interface T_Identifier '{' PrototypeList '}'

   27 FnDecl: FnDef StmtBlock

   28 FieldList: FieldList VarDecl
   29          | FieldList FnDecl
   30          | VarDecl
   31          | FnDecl

   32 Formals: FormalsList
   33        | /* empty */

   34 FormalsList: Variable
   35            | FormalsList ',' Variable

   36 Prototype: FnDef ';'

   37 FnDef: Type T_Identifier '(' Formals ')'

   38 PrototypeList: PrototypeList Prototype
   39              | Prototype

   40 StmtBlock: '{' VarDeclList StmtList '}'
   41          | '{' VarDeclList '}'
   42          | '{' StmtList '}'
   43          | '{' '}'

   44 StmtList: StmtList Stmt
   45         | Stmt

   46 VarDeclList: VarDeclList VarDecl
   47            | VarDecl

   48 Stmt: OptExpr ';'
   49     | T_While '(' Expr ')' Stmt
   50     | T_Return ';'
   51     | T_Return Expr ';'
   52     | T_Break ';'
   53     | T_Print '(' ExprList ')' ';'
   54     | T_For '(' OptExpr ';' Expr ';' OptExpr ')' Stmt
   55     | IfStmt
   56     | T_Switch '(' Expr ')' '{' CaseStmtList DefaultStmt '}'
   57     | StmtBlock

   58 OptExpr: Expr
   59        | /* empty */

   60 CaseStmtList: CaseStmtList CaseStmt
   61             | CaseStmt

   62 CaseStmt: T_Case T_IntConstant ':' StmtList
   63         | T_Case T_IntConstant ':'

   64 DefaultStmt: T_Default ':' StmtList
   65            | T_Default ':'

   66 IfStmt: T_If '(' Expr ')' Stmt
   67       | T_If '(' Expr ')' Stmt T_Else Stmt

   68 ExprList: ExprList ',' Expr
   69         | Expr

   70 Expr: LValue
   71     | Call
   72     | Constant
   73     | Expr T_Or Expr
   74     | Expr T_And Expr
   75     | Expr '<' Expr
   76     | Expr '>' Expr
   77     | Expr T_GreaterEqual Expr
   78     | Expr T_LessEqual Expr
   79     | Expr T_Equal Expr
   80     | Expr T_NotEqual Expr
   81     | Expr '+' Expr
   82     | Expr '-' Expr
   83     | Expr '*' Expr
   84     | Expr '/' Expr
   85     | Expr '%' Expr
   86     | '-' Expr
   87     | '!' Expr
   88     | Expr T_Incr
   89     | Expr T_Decr
   90     | '(' Expr ')'
   91     | T_This
   92     | T_ReadInteger '(' ')'
   93     | T_ReadLine '(' ')'
   94     | T_New NamedType
   95     | T_NewArray '(' Expr ',' Type ')'
   96     | LValue '=' Expr

   97 Call: T_Identifier '(' Actuals ')'
   98     | Expr '.' T_Identifier '(' Actuals ')'

   99 Actuals: ExprList
  100        | /* empty */

  101 LValue: T_Identifier
  102       | Expr '.' T_Identifier
  103       | Expr '[' Expr ']'

  104 Constant: T_IntConstant
  105         | T_DoubleConstant
  106         | T_BoolConstant
  107         | T_StringConstant
  108         | T_Null


Terminals, with rules where they appear

$end (0) 0
'!' (33) 87
'%' (37) 85
'(' (40) 37 49 53 54 56 66 67 90 92 93 95 97 98
')' (41) 37 49 53 54 56 66 67 90 92 93 95 97 98
'*' (42) 83
'+' (43) 81
',' (44) 24 35 68 95
'-' (45) 82 86
'.' (46) 98 102
'/' (47) 84
':' (58) 62 63 64 65
';' (59) 8 36 48 50 51 52 53 54
'<' (60) 75
'=' (61) 96
'>' (62) 76
'[' (91) 103
']' (93) 103
'{' (123) 18 19 26 40 41 42 43 56
'}' (125) 18 19 26 40 41 42 43 56
error (256)
T_Void (258) 10
T_Bool (259) 11
T_Int (260) 12
T_Double (261) 13
T_String (262) 14
T_Class (263) 18 19
T_LessEqual (264) 78
T_GreaterEqual (265) 77
T_Equal (266) 79
T_NotEqual (267) 80
T_Dims (268) 16
T_And (269) 74
T_Or (270) 73
T_Null (271) 108
T_Extends (272) 20
T_This (273) 91
T_Interface (274) 26
T_Implements (275) 22
T_While (276) 49
T_For (277) 54
T_If (278) 66 67
T_Else (279) 67
T_Return (280) 50 51
T_Break (281) 52
T_New (282) 94
T_NewArray (283) 95
T_Print (284) 53
T_ReadInteger (285) 92
T_ReadLine (286) 93
T_Switch (287) 56
T_Case (288) 62 63
T_Default (289) 64 65
T_Incr (290) 88
T_Decr (291) 89
T_Identifier (292) 9 17 18 19 20 24 25 26 37 97 98 101 102
T_StringConstant (293) 107
T_IntConstant (294) 62 63 104
T_DoubleConstant (295) 105
T_BoolConstant (296) 106
NEG (297)
NOELSE (298)
EMPTYCASE (299)
EMPTYDEFAULT (300)
NONEMPTYCASE (301)
NONEMPTYDEFAULT (302)


Nonterminals, with rules where they appear

$accept (67)
    on left: 0
Program (68)
    on left: 1, on right: 0
DeclList (69)
    on left: 2 3, on right: 1 2
Decl (70)
    on left: 4 5 6 7, on right: 2 3
VarDecl (71)
    on left: 8, on right: 4 28 30 46 47
Variable (72)
    on left: 9, on right: 8 34 35
Type (73)
    on left: 10 11 12 13 14 15 16, on right: 9 16 37 95
NamedType (74)
    on left: 17, on right: 15 94
ClassDecl (75)
    on left: 18 19, on right: 5
ClassExtends (76)
    on left: 20 21, on right: 18 19
ClassImplements (77)
    on left: 22 23, on right: 18 19
ImplementsTypeList (78)
    on left: 24 25, on right: 22 24
InterfaceDecl (79)
    on left: 26, on right: 6
FnDecl (80)
    on left: 27, on right: 7 29 31
FieldList (81)
    on left: 28 29 30 31, on right: 18 28 29
Formals (82)
    on left: 32 33, on right: 37
FormalsList (83)
    on left: 34 35, on right: 32 35
Prototype (84)
    on left: 36, on right: 38 39
FnDef (85)
    on left: 37, on right: 27 36
PrototypeList (86)
    on left: 38 39, on right: 26 38
StmtBlock (87)
    on left: 40 41 42 43, on right: 27 57
StmtList (88)
    on left: 44 45, on right: 40 42 44 62 64
VarDeclList (89)
    on left: 46 47, on right: 40 41 46
Stmt (90)
    on left: 48 49 50 51 52 53 54 55 56 57, on right: 44 45 49 54 66
    67
OptExpr (91)
    on left: 58 59, on right: 48 54
CaseStmtList (92)
    on left: 60 61, on right: 56 60
CaseStmt (93)
    on left: 62 63, on right: 60 61
DefaultStmt (94)
    on left: 64 65, on right: 56
IfStmt (95)
    on left: 66 67, on right: 55
ExprList (96)
    on left: 68 69, on right: 53 68 99
Expr (97)
    on left: 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87
    88 89 90 91 92 93 94 95 96, on right: 49 51 54 56 58 66 67 68 69
    73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 95 96 98
    102 103
Call (98)
    on left: 97 98, on right: 71
Actuals (99)
    on left: 99 100, on right: 97 98
LValue (100)
    on left: 101 102 103, on right: 70 96
Constant (101)
    on left: 104 105 106 107 108, on right: 72


State 0

    0 $accept: . Program $end

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    Program        go to state 9
    DeclList       go to state 10
    Decl           go to state 11
    VarDecl        go to state 12
    Variable       go to state 13
    Type           go to state 14
    NamedType      go to state 15
    ClassDecl      go to state 16
    InterfaceDecl  go to state 17
    FnDecl         go to state 18
    FnDef          go to state 19


State 1

   10 Type: T_Void .

    $default  reduce using rule 10 (Type)


State 2

   11 Type: T_Bool .

    $default  reduce using rule 11 (Type)


State 3

   12 Type: T_Int .

    $default  reduce using rule 12 (Type)


State 4

   13 Type: T_Double .

    $default  reduce using rule 13 (Type)


State 5

   14 Type: T_String .

    $default  reduce using rule 14 (Type)


State 6

   18 ClassDecl: T_Class . T_Identifier ClassExtends ClassImplements '{' FieldList '}'
   19          | T_Class . T_Identifier ClassExtends ClassImplements '{' '}'

    T_Identifier  shift, and go to state 20


State 7

   26 InterfaceDecl: T_Interface . T_Identifier '{' PrototypeList '}'

    T_Identifier  shift, and go to state 21


State 8

   17 NamedType: T_Identifier .

    $default  reduce using rule 17 (NamedType)


State 9

    0 $accept: Program . $end

    $end  shift, and go to state 22


State 10

    1 Program: DeclList .
    2 DeclList: DeclList . Decl

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 1 (Program)

    Decl           go to state 23
    VarDecl        go to state 12
    Variable       go to state 13
    Type           go to state 14
    NamedType      go to state 15
    ClassDecl      go to state 16
    InterfaceDecl  go to state 17
    FnDecl         go to state 18
    FnDef          go to state 19


State 11

    3 DeclList: Decl .

    $default  reduce using rule 3 (DeclList)


State 12

    4 Decl: VarDecl .

    $default  reduce using rule 4 (Decl)


State 13

    8 VarDecl: Variable . ';'

    ';'  shift, and go to state 24


State 14

    9 Variable: Type . T_Identifier
   16 Type: Type . T_Dims
   37 FnDef: Type . T_Identifier '(' Formals ')'

    T_Dims        shift, and go to state 25
    T_Identifier  shift, and go to state 26


State 15

   15 Type: NamedType .

    $default  reduce using rule 15 (Type)


State 16

    5 Decl: ClassDecl .

    $default  reduce using rule 5 (Decl)


State 17

    6 Decl: InterfaceDecl .

    $default  reduce using rule 6 (Decl)


State 18

    7 Decl: FnDecl .

    $default  reduce using rule 7 (Decl)


State 19

   27 FnDecl: FnDef . StmtBlock

    '{'  shift, and go to state 27

    StmtBlock  go to state 28


State 20

   18 ClassDecl: T_Class T_Identifier . ClassExtends ClassImplements '{' FieldList '}'
   19          | T_Class T_Identifier . ClassExtends ClassImplements '{' '}'

    T_Extends  shift, and go to state 29

    $default  reduce using rule 21 (ClassExtends)

    ClassExtends  go to state 30


State 21

   26 InterfaceDecl: T_Interface T_Identifier . '{' PrototypeList '}'

    '{'  shift, and go to state 31


State 22

    0 $accept: Program $end .

    $default  accept


State 23

    2 DeclList: DeclList Decl .

    $default  reduce using rule 2 (DeclList)


State 24

    8 VarDecl: Variable ';' .

    $default  reduce using rule 8 (VarDecl)


State 25

   16 Type: Type T_Dims .

    $default  reduce using rule 16 (Type)


State 26

    9 Variable: Type T_Identifier .
   37 FnDef: Type T_Identifier . '(' Formals ')'

    '('  shift, and go to state 32

    $default  reduce using rule 9 (Variable)


State 27

   40 StmtBlock: '{' . VarDeclList StmtList '}'
   41          | '{' . VarDeclList '}'
   42          | '{' . StmtList '}'
   43          | '{' . '}'

    T_Void            shift, and go to state 1
    T_Bool            shift, and go to state 2
    T_Int             shift, and go to state 3
    T_Double          shift, and go to state 4
    T_String          shift, and go to state 5
    T_Null            shift, and go to state 33
    T_This            shift, and go to state 34
    T_While           shift, and go to state 35
    T_For             shift, and go to state 36
    T_If              shift, and go to state 37
    T_Return          shift, and go to state 38
    T_Break           shift, and go to state 39
    T_New             shift, and go to state 40
    T_NewArray        shift, and go to state 41
    T_Print           shift, and go to state 42
    T_ReadInteger     shift, and go to state 43
    T_ReadLine        shift, and go to state 44
    T_Switch          shift, and go to state 45
    T_Identifier      shift, and go to state 46
    T_StringConstant  shift, and go to state 47
    T_IntConstant     shift, and go to state 48
    T_DoubleConstant  shift, and go to state 49
    T_BoolConstant    shift, and go to state 50
    '-'               shift, and go to state 51
    '!'               shift, and go to state 52
    '{'               shift, and go to state 27
    '}'               shift, and go to state 53
    '('               shift, and go to state 54

    $default  reduce using rule 59 (OptExpr)

    VarDecl      go to state 55
    Variable     go to state 13
    Type         go to state 56
    NamedType    go to state 15
    StmtBlock    go to state 57
    StmtList     go to state 58
    VarDeclList  go to state 59
    Stmt         go to state 60
    OptExpr      go to state 61
    IfStmt       go to state 62
    Expr         go to state 63
    Call         go to state 64
    LValue       go to state 65
    Constant     go to state 66


State 28

   27 FnDecl: FnDef StmtBlock .

    $default  reduce using rule 27 (FnDecl)


State 29

   20 ClassExtends: T_Extends . T_Identifier

    T_Identifier  shift, and go to state 67


State 30

   18 ClassDecl: T_Class T_Identifier ClassExtends . ClassImplements '{' FieldList '}'
   19          | T_Class T_Identifier ClassExtends . ClassImplements '{' '}'

    T_Implements  shift, and go to state 68

    $default  reduce using rule 23 (ClassImplements)

    ClassImplements  go to state 69


State 31

   26 InterfaceDecl: T_Interface T_Identifier '{' . PrototypeList '}'

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    Type           go to state 70
    NamedType      go to state 15
    Prototype      go to state 71
    FnDef          go to state 72
    PrototypeList  go to state 73


State 32

   37 FnDef: Type T_Identifier '(' . Formals ')'

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 33 (Formals)

    Variable     go to state 74
    Type         go to state 56
    NamedType    go to state 15
    Formals      go to state 75
    FormalsList  go to state 76


State 33

  108 Constant: T_Null .

    $default  reduce using rule 108 (Constant)


State 34

   91 Expr: T_This .

    $default  reduce using rule 91 (Expr)


State 35

   49 Stmt: T_While . '(' Expr ')' Stmt

    '('  shift, and go to state 77


State 36

   54 Stmt: T_For . '(' OptExpr ';' Expr ';' OptExpr ')' Stmt

    '('  shift, and go to state 78


State 37

   66 IfStmt: T_If . '(' Expr ')' Stmt
   67       | T_If . '(' Expr ')' Stmt T_Else Stmt

    '('  shift, and go to state 79


State 38

   50 Stmt: T_Return . ';'
   51     | T_Return . Expr ';'

    T_Null            shift, and go to state 33
    T_This            shift, and go to state 34
    T_New             shift, and go to state 40
    T_NewArray        shift, and go to state 41
    T_ReadInteger     shift, and go to state 43
    T_ReadLine        shift, and go to state 44
    T_Identifier      shift, and go to state 80
    T_StringConstant  shift, and go to state 47
    T_IntConstant     shift, and go to state 48
    T_DoubleConstant  shift, and go to state 49
    T_BoolConstant    shift, and go to state 50
    '-'               shift, and go to state 51
    '!'               shift, and go to state 52
    ';'               shift, and go to state 81
    '('               shift, and go to state 54

    Expr      go to state 82
    Call      go to state 64
    LValue    go to state 65
    Constant  go to state 66


State 39
